src2/objects/NES_Telefonica_GEM_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>NES_ApplicationId__c</fullName>
        <label>ApplicationId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_CustomerId__c</fullName>
        <label>CustomerId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_InternationalPhoneNumber__c</fullName>
        <label>InternationalPhoneNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_Key__c</fullName>
        <label>Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_SIM_Endpoint__c</fullName>
        <defaultValue>&quot;callout:Telephonica_Smart_M2M/services/REST/GlobalM2M/Inventory/v5/r12/sim?icc=&quot;</defaultValue>
        <label>SIM Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NES_Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Telefonica GEM Setting</label>
    <pluralLabel>Telefonica GEM Settings</pluralLabel>
</CustomObject>